--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "android": "react-native run-android"
   },
   "dependencies": {
+    "es6-shim": "^0.35.3",
     "react": "16.3.1",
     "react-art": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -31,7 +32,7 @@
     "css-loader": "^0.28.11",
     "jest": "23.1.0",
     "postcss-loader": "^2.1.5",
-    "react-hot-loader": "^4.3.3",
+    "react-hot-loader": "3.1.3",
     "react-native-css-transformer": "^1.2.1",
     "react-test-renderer": "16.3.1",
     "style-loader": "^0.21.0",
