--- a/package.json
+++ b/package.json
@@ -16,22 +16,22 @@
     "react-art": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-native": "0.56.0",
-    "react-native-web": "^0.8.6"
+    "react-native-web": "^0.8.8"
   },
   "devDependencies": {
-    "autoprefixer": "^8.6.4",
+    "@babel/preset-env": "^7.0.0-beta.53",
+    "autoprefixer": "^8.6.5",
     "babel-core": "^6.26.3",
-    "babel-jest": "23.2.0",
-    "babel-loader": "^7.1.4",
+    "babel-jest": "23.4.0",
+    "babel-loader": "^8.0.0-beta.4",
     "babel-plugin-react-css-modules": "^3.4.2",
     "babel-plugin-react-native-platform-specific-extensions": "^1.1.1",
     "babel-plugin-react-native-stylename-to-style": "^0.12.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "babel-preset-react": "^7.0.0-beta.3",
     "babel-preset-react-native": "5.0.2",
-    "css-loader": "^0.28.11",
-    "jest": "23.3.0",
-    "postcss-loader": "^2.1.5",
+    "css-loader": "^1.0.0",
+    "jest": "23.4.1",
+    "postcss-loader": "^2.1.6",
     "react-hot-loader": "3.1.3",
     "react-native-css-transformer": "^1.2.2",
     "react-test-renderer": "16.4.1",
@@ -39,7 +39,7 @@
     "stylelint": "^9.3.0",
     "stylelint-config-react-native-css-modules": "^1.4.0",
     "stylelint-react-native": "^1.1.1",
-    "webpack": "^4.14.0",
+    "webpack": "^4.16.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
   },
