--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   },
   "dependencies": {
     "es6-shim": "^0.35.3",
-    "react": "16.4.1",
+    "react": "16.5.0",
     "react-art": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-native": "0.56.0",
+    "react-native": "0.57.0",
     "react-native-web": "^0.8.8"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.0.0-beta.53",
+    "@babel/core": "^7.0.1",
+    "@babel/preset-env": "^7.0.0",
     "autoprefixer": "^8.6.5",
     "babel-core": "^6.26.3",
     "babel-jest": "23.4.0",
@@ -28,9 +29,9 @@
     "babel-plugin-react-native-platform-specific-extensions": "^1.1.1",
     "babel-plugin-react-native-stylename-to-style": "^0.12.5",
     "babel-preset-react": "^7.0.0-beta.3",
-    "babel-preset-react-native": "5.0.2",
     "css-loader": "^1.0.0",
     "jest": "23.4.1",
+    "metro-react-native-babel-preset": "^0.45.0",
     "postcss-loader": "^2.1.6",
     "react-hot-loader": "3.1.3",
     "react-native-css-transformer": "^1.2.2",
