--- a/package.json
+++ b/package.json
@@ -11,38 +11,38 @@
     "android": "react-native run-android"
   },
   "dependencies": {
-    "es6-shim": "^0.35.3",
-    "react": "16.5.0",
-    "react-art": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-native": "0.57.0",
-    "react-native-web": "^0.8.8"
+    "es6-shim": "^0.35.4",
+    "react": "16.6.3",
+    "react-art": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-native": "0.58.4",
+    "react-native-web": "^0.10.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.1",
-    "@babel/preset-env": "^7.0.0",
-    "autoprefixer": "^8.6.5",
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
+    "autoprefixer": "^9.4.7",
     "babel-core": "^6.26.3",
-    "babel-jest": "23.4.0",
-    "babel-loader": "^8.0.0-beta.4",
-    "babel-plugin-react-css-modules": "^3.4.2",
+    "babel-jest": "24.1.0",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-react-css-modules": "^5.0.0",
     "babel-plugin-react-native-platform-specific-extensions": "^1.1.1",
-    "babel-plugin-react-native-stylename-to-style": "^0.12.5",
+    "babel-plugin-react-native-stylename-to-style": "^0.13.0",
     "babel-preset-react": "^7.0.0-beta.3",
     "css-loader": "^1.0.0",
-    "jest": "23.4.1",
-    "metro-react-native-babel-preset": "^0.45.0",
-    "postcss-loader": "^2.1.6",
+    "jest": "24.1.0",
+    "metro-react-native-babel-preset": "^0.51.1",
+    "postcss-loader": "^3.0.0",
     "react-hot-loader": "3.1.3",
-    "react-native-css-transformer": "^1.2.2",
-    "react-test-renderer": "16.4.1",
-    "style-loader": "^0.21.0",
-    "stylelint": "^9.6.0",
-    "stylelint-config-react-native-css-modules": "^2.0.1",
-    "stylelint-react-native": "^2.0.0",
-    "webpack": "^4.16.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "react-native-css-transformer": "^1.2.3",
+    "react-test-renderer": "16.6.3",
+    "style-loader": "^0.23.1",
+    "stylelint": "^9.10.1",
+    "stylelint-config-react-native-css-modules": "^2.1.0",
+    "stylelint-react-native": "^2.0.1",
+    "webpack": "^4.29.4",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.1.14"
   },
   "browserslist": [
     "> 1%",
